# gamelibs-fmt

./: Makefile  meson.build
include/fmt/: base.h  chrono.h  core.h  format.h
msvc/: fmt.vcxproj  fmt.vcxproj.filters
test/: base-test.cc  core-test.cc  scan.h
